@@ -18,6 +18,14 @@ Version 1.7.8
        log dialog open segfaults. (Stefan)
 - BUG: Issue #309: file diff dialog
        can segfault. (Stefan)
+- BUG: Issue #315: long paths handled
+       incorrectly. (Stefan)
+- BUG: Issue #316: Threads not correctly synchronized
+       in repo browser. (Stefan)
+- BUG: Issue #317: progress dlg can't be closed
+       with the red X button. (Stefan)
+- BUG: Issue #318: Command URLs with spaces parsed
+       incorrectly. (Stefan)
 
 Version 1.7.7
 - BUG: Issue #233: Crash when closing the
